tests/ui/diagnostic_namespace/do_not_recommend/with_lifetime.current.stderr
error: lifetime may not live long enough
  --> $DIR/with_lifetime.rs:18:5
   |
LL | fn foo<'a>(a: &'a ()) {
   |        -- lifetime `'a` defined here
LL |     needs_root::<&'a ()>();
   |     ^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

